Transform (bicubic) node not working on ID channel #46408

Closed
opened 2015-10-07 20:27:46 +02:00 by Anna Celarek · 4 comments

System Information
Windows 10, GTX 950M
Ubuntu, 630 GT

Blender Version
2.76

Short description of error
The Transform node with bicubic interpolation gets all messy when used on the IndexMA channel, no matter if used with translate, rotate or scale.
There is no way of scaling an IndexMA channel down with interpolation.

Exact steps for others to reproduce the error
See the file and screenshot. The whole box has material ID 2, should render solid white and scale down by 0.5 after the node.
Instead, holes appear in the box and the edge does not look like bicubic interpolation at all.

scale.blend

scale_bug.jpg

**System Information** Windows 10, GTX 950M Ubuntu, 630 GT **Blender Version** 2.76 **Short description of error** The Transform node with bicubic interpolation gets all messy when used on the IndexMA channel, no matter if used with translate, rotate or scale. There is no way of scaling an IndexMA channel down with interpolation. **Exact steps for others to reproduce the error** See the file and screenshot. The whole box has material ID 2, should render solid white and scale down by 0.5 after the node. Instead, holes appear in the box and the edge does not look like bicubic interpolation at all. [scale.blend](https://archive.blender.org/developer/F243203/scale.blend) ![scale_bug.jpg](https://archive.blender.org/developer/F243204/scale_bug.jpg)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnnaCelarek

Added subscriber: @AnnaCelarek

This issue was referenced by 8918e089a5

This issue was referenced by 8918e089a5efed8aec0317ecad22efa68dabd6d3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46408
No description provided.