Fix T46408: Transform (bicubic) ID channel fails